attached_assets/Pasted-Found-active-sessions-0-Returning-sessions-with-users-0_1768580986566.txt
Found active sessions: 0
Returning sessions with users: 0
4:29:16 PM [express] GET /api/activity/sessions/active 304 in 565ms :: []
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/consultant-ai-config.tsx: SyntaxError: Identifier 'Users' has already been declared. (72:2)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1507:19)
    at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:72:21)
    at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:852:16)
    at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:847:12)
    at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:739:12)
    at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3229:10)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3486:17)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4387:20)
    at parseNamedImportSpecifiers (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3447:36)
    at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3179:37)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3148:17)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2973:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:647:25)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3223:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:482:17)
    at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:419:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1443:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1417:10)
    at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
    at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:88:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4337:20)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:86:38)
    at TransformPluginContext.handler (/home/runner/workspace/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs:74:23)
    at PluginContainer.transform (/home/runner/workspace/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:49100:19)
    at loadAndTransform (/home/runner/workspace/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:51978:49) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'VarRedeclaration',
  loc: Position { line: 72, column: 2, index: 2027 },
  pos: 2027,
  syntaxPlugin: undefined
}
4:29:34 PM [vite] Internal server error: /home/runner/workspace/client/src/pages/consultant-ai-config.tsx: Identifier 'Users' has already been declared. (72:2)

  70 |   Plus,
  71 |   Download,
> 72 |   Users
     |   ^
  73 | } from "lucide-react";
  74 | import { useLocation } from "wouter";
  75 | import { NavigationTabs } from "@/components/ui/navigation-tabs";
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/consultant-ai-config.tsx:72:2
  70 |    Plus,
  71 |    Download,
  72 |    Users
     |    ^
  73 |  } from "lucide-react";
  74 |  import { useLocation } from "wouter";
      at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
      at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1507:19)
      at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:72:21)
      at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:852:16)
      at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:847:12)
      at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:739:12)
      at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3229:10)
      at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3486:17)
      at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4387:20)
      at parseNamedImportSpecifiers (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3447:36)
      at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3179:37)
      at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3148:17)
      at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2973:28)
      at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:647:25)
      at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3223:20)
      at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:482:17)
      at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:419:17)
      at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1443:16)
      at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1417:10)
      at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
      at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
      at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:88:25)
      at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4337:20)
      at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:86:38)
      at parser (/home/runner/workspace/node_modules/@babel/core/src/parser/index.ts:29:19)
      at parser.next (<anonymous>)
      at normalizeFile (/home/runner/workspace/node_modules/@babel/core/src/transformation/normalize-file.ts:50:24)
      at normalizeFile.next (<anonymous>)
      at run (/home/runner/workspace/node_modules/@babel/core/src/transformation/index.ts:41:36)
      at run.next (<anonymous>)
      at transform (/home/runner/workspace/node_modules/@babel/core/src/transform.ts:29:20)
      at transform.next (<anonymous>)
      at step (/home/runner/workspace/node_modules/gensync/index.js:261:32)
      at /home/runner/workspace/node_modules/gensync/index.js:273:13
      at async.call.result.err.err (/home/runner/workspace/node_modules/gensync/index.js:223:11)
      at /home/runner/workspace/node_modules/gensync/index.js:189:28
      at <anonymous> (/home/runner/workspace/node_modules/@babel/core/src/gensync-utils/async.ts:90:7)
      at /home/runner/workspace/node_modules/gensync/index.js:113:33
      at step (/home/runner/workspace/node_modules/gensync/index.js:287:14)
      at /home/runner/workspace/node_modules/gensync/index.js:273:13
      at async.call.result.err.err (/home/runner/workspace/node_modules/gensync/index.js:223:11)